// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticker defaults to 0 if no time is specified 1`] = `
<time>
  00
</time>
`;

exports[`Ticker formats a duration in hours 1`] = `
<time>
  1h
</time>
`;

exports[`Ticker formats a duration in minutes 1`] = `
<time>
  05
</time>
`;

exports[`Ticker formats a duration in seconds 1`] = `
<time>
  30
</time>
`;

exports[`Ticker increments the time every second 1`] = `
<Ticker
  ticking={true}
>
  <time>
    01
  </time>
</Ticker>
`;
